--- a/Northwind/Northwind/Web.config
+++ b/Northwind/Northwind/Web.config
@@ -79,5 +79,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="NorthwindConn" connectionString="data source=AAAPC\AAASQL;initial catalog=NORTHWIND;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="NorthwindConn_J" connectionString="data source=OSRP\SQLDE;initial catalog=NORTHWIND;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
